gitea-provisioning/kustomize-provisioning/base/postgresql-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: 'true'
  
  labels:
    app: gitea
    app.kubernetes.io/component: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    generator: helm
  name: "gitea-db"
spec:
  replicas: 1
  selector:
    name: "gitea-db"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: "gitea-db"
    spec:
      containers:
        - resources:
            limits:
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          name: postgresql
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            initialDelaySeconds: 120
            timeoutSeconds: 10
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: "gitea-db"
          image: "rhel8/postgresql-13"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: "gitea-db"
          persistentVolumeClaim:
            claimName: "gitea-db"
