gitea-provisioning/kustomize-provisioning/base/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  
  labels:
    app: gitea
    app.kubernetes.io/component: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    generator: helm
  annotations:
    template.openshift.io/expose-uri: >-
      postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
  name: "gitea-db"
spec:
  ports:
    - name: postgresql
      nodePort: 0
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: "gitea-db"
  sessionAffinity: None
  type: ClusterIP
