gitea-provisioning/kustomize-provisioning/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The Gitea server's http port
  
  labels:
    app: gitea
    app.kubernetes.io/component: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    generator: helm
  name: gitea
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitea
    deploymentconfig: gitea
  sessionAffinity: None
  type: ClusterIP
