gitea-provisioning/kustomize-provisioning/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Gitea's HTTP route
  
  labels:
    app: gitea
    app.kubernetes.io/component: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    generator: helm
  name: gitea
spec:
  host: gitea.apps.middleware.rhbr-lab.com
  to:
    kind: Service
    name: gitea
    weight: 100
  wildcardPolicy: None
